# spacewave

./: .aider.chat.history.md  .custom-gcl.yml  .eslintrc.cjs  .gitattributes  .gitignore  .golangci.yml  .ignore  .prettierignore  .prettierrc.yaml  .protoc-manifest.json  AGENTS.md  CHANGELOG.org  LICENSE  Makefile  README.md  STATIC_ASSETS_ISSUE.md  VITE_HMR.md  auth.pb.go  auth.proto  bldr  bldr.star  bldr.yaml  components.json  ctrl-select-entity-id.go  deps-web.go  deps.go  dev.bash  dir-derive-entity-keypair.go  dir-lookup-entity.go  dir-prompt-password.go  dir-select-entity-id.go  dir-select-entity.go  directive-lookup-entity.go  dist.go  dist_test.go  entity-keypair-set.go  entity-keypair.go  entity.go  entity_test.go  errors.go  (+33 more)
.bldr/: .gitignore  LICENSE.bldr
.github/: renovate.json
all/: all.go
app/: AboutDialog.tsx  App.backend.e2e.test.tsx  App.e2e.test.tsx  App.tsx  AppAPI.tsx  AppHome.tsx  AppLogin.tsx  AppQuickstart.css  AppQuickstart.tsx  AppSession.test.tsx  AppSession.tsx  AppShell.tsx  AppSignup.test.tsx  AppSignup.tsx  BuiltinCommands.tsx  ChangelogBack.e2e.test.tsx  DebugCommands.tsx  EditorShell.tsx  EmailSupportDialog.test.tsx  EmailSupportDialog.tsx  (+38 more)
desktop/cross/: CMakeLists.txt
desktop/cross/platform/linux/: loading-window-x11.cpp
desktop/cross/platform/windows/: loading-window-win32.cpp
desktop/cross/src/: loading-window.h  main.cpp  pipe-client.cpp  pipe-client.h  proto.cpp  proto.h  update-manager.cpp  update-manager.h
desktop/cross/toolchains/: linux-amd64.cmake  linux-arm64.cmake  windows-amd64.cmake  windows-arm64.cmake
(+11470 files in other folders)
